# markitdown-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
.zed/: settings.json
src/: api.py  config.py  main.py
src/markitdown/: models.py  router.py
